apps/homepage/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
spec:
  selector:
    app: homepage
  ports:
  - name: web
    port: 80
    targetPort: 3000
